# django-modeltrans-tabs

./: .gitignore  README.md  pyproject.toml
modeltrans_tabs/: admin.py  apps.py
modeltrans_tabs/static/modeltrans_tabs/: i18n_tabs.css  i18n_tabs.js
